# medspa_project

./: .gitignore  Dockerfile  README.md  app.py  config_file.config  docker-compose.yml  drop_coll.py  ingestion.py  medspa_flask.app  nginx.conf  pyproject.toml  requirements.txt  run_drop_coll.sh  run_ingestion.sh  setup.py  start.sh  template.py  test.py  update.py
future_scope/: last_line.sh  process_watcher.py
gsheet/: __init__.py
medspa/components/gsheet/: __init__.py
medspa/constants/: __init__.py
medspa/exception/: __init__.py
static/css/: iofrm-style.css  iofrm-theme11.css  iofrm-theme25.css
template/: index.html
templates/: index.html  index2.html  patient_details.html  patient_details2.html  patient_details3.html  patient_details4.html
